--- a/WenElevating.Todo/MainWindow.xaml
+++ b/WenElevating.Todo/MainWindow.xaml
@@ -265,12 +265,11 @@
             Grid.Column="1"
             Margin="0,0,3,0">
             <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="30" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
                 <StackPanel
+                    Height="30"
                     HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Panel.ZIndex="100"
                     Orientation="Horizontal"
                     WindowChrome.IsHitTestVisibleInChrome="True">
                     <controls:IconButton
@@ -313,7 +312,6 @@
                 </StackPanel>
                 <Frame
                     x:Name="PageFrame"
-                    Grid.Row="1"
                     Content="{Binding CurrentPage}"
                     Focusable="False"
                     NavigationUIVisibility="Hidden" />
