--- a/WenElevating.Todo/Pages/TaskPage.xaml
+++ b/WenElevating.Todo/Pages/TaskPage.xaml
@@ -2,6 +2,7 @@
     x:Class="WenElevating.Todo.Pages.TaskPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:WenElevating.Resources.CustomControls;assembly=WenElevating.Resources"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WenElevating.Todo.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -13,27 +14,38 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" MinWidth="200" />
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <Grid>
-            <TextBlock
-                Margin="0,0,5,0"
-                HorizontalAlignment="Right"
-                Text="111" />
+        <Grid Grid.Column="0" Width="315">
+            <Canvas>
+                <StackPanel>
+                    <Border
+                        Width="50"
+                        Height="50"
+                        Margin="20,20,0,0"
+                        controls:DragControlHelper.IsCanDrag="True"
+                        Background="Red"
+                        CornerRadius="5" />
+                    <Border
+                        Width="50"
+                        Height="50"
+                        Margin="20,20,0,0"
+                        controls:DragControlHelper.IsCanDrag="True"
+                        Background="Red"
+                        CornerRadius="5" />
+                </StackPanel>
+            </Canvas>
         </Grid>
 
-        <!-- 可 -->
-        <GridSplitter Style="{StaticResource Todo_GridSplitterStyle}" />
+        <!--  可拉伸Grid  -->
+        <GridSplitter
+            x:Name="TaskCatgoryList"
+            Grid.Column="0"
+            Style="{StaticResource Todo_GridSplitterStyle}" />
 
-        <Grid Grid.Column="1">
-            <TextBlock Text="222" />
-        </Grid>
-
-        <WrapPanel Grid.Column="2">
-            <TextBlock Text="333" />
-        </WrapPanel>
+        <Frame Grid.Column="1" />
     </Grid>
 </local:ApplicationPageBase>
