--- a/WenElevating.Todo/Pages/CalendarPage.xaml
+++ b/WenElevating.Todo/Pages/CalendarPage.xaml
@@ -1,17 +1,17 @@
 ﻿<local:ApplicationPageBase
-    x:Class="WenElevating.Todo.Pages.CalendarPage"
+    x:Class="WenElevating.Todo.Pages.TodayPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WenElevating.Todo.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="CalendarPage"
+    Title="TodayPage"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Background="White"
     mc:Ignorable="d">
 
     <Grid>
-        <TextBlock Text="Calendar Page" />
+        <TextBlock Text="Today Page" />
     </Grid>
 </local:ApplicationPageBase>
